# bark

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STYLE.md  ark_demo.sh  flake.nix  gendocs.sh  justfile
ark-lib/: Cargo.toml
ark-lib/src/: address.rs  arkoor.rs  board.rs  connectors.rs  encode.rs  fee.rs  forfeit.rs  lib.rs  lightning.rs  musig.rs  napkin.rs  onboard.rs  oor.rs  rounds.rs  util.rs  vtxo.rs
ark-lib/src/test/: dummy.rs
ark-lib/src/tree/: mod.rs  signed.rs
ark-lib/src/vtxo/: mod.rs  validation.rs
ark-testing/: Cargo.toml
ark-testing/examples/: dump-aspd-postgres-schema.rs
ark-testing/src/: aspd.rs  bark.rs  cmd.rs  constants.rs  context.rs  error.rs  lib.rs  runner.rs  setup.rs  util.rs
ark-testing/src/daemon/: aspd.rs  bitcoind.rs  electrs.rs  lightningd.rs  log.rs  mod.rs  postgres.rs
ark-testing/src/postgres/: external.rs  mod.rs  query.rs  test_managed.rs
ark-testing/tests/: aspd.rs  bark.rs  bitcoind.rs  chain_source.rs  exit.rs  lightningd.rs  postgres.rs  server.rs
aspd/: Cargo.toml  build.rs  config.default.toml  schema.sql
aspd-log/: Cargo.toml
aspd-log/src/: lib.rs  macros.rs  msgs.rs  serde_utils.rs
aspd-log/src/msgs/: arkoor.rs  board.rs  forfeits.rs  mod.rs  onboard.rs  rounds.rs  sweeps.rs  system.rs  txindex.rs  wallet.rs
aspd-rpc/: Cargo.toml  build.rs
aspd-rpc/rpc-protos/: aspd.proto
aspd-rpc/src/: aspd.rs  convert.rs  lib.rs
aspd-rpc/src/rpc/: mod.rs
aspd/examples/: dump-default-config.rs
aspd/rpc-protos/: aspd.proto
aspd/src/: bitcoind.rs  cln.rs  config.rs  convert.rs  error.rs  flux.rs  forfeits.rs  lib.rs  lightning.rs  main.rs  psbtext.rs  rpcserver.rs  serde_util.rs  sweep_rounds.rs  sweeps.rs  system.rs  telemetry.rs  txindex.rs  vtxo_sweeper.rs  wallet.rs
aspd/src/cln/: mod.rs  node.rs
aspd/src/database/: cln.rs  mod.rs  model.rs  utils.rs  wallet.rs
bark/: Cargo.toml  README.md  schema.sql
bark-cli/: Cargo.toml  build.rs
bark-cli/src/: lib.rs  log.rs  util.rs  wallet.rs
bark-cln/: Cargo.toml  README.md  build.rs
bark-cln/src/: convert.rs  lib.rs  subscribe_sendpay.rs
bark-json/: Cargo.toml
bark-json/src/: cli.rs  lib.rs  movements.rs  notifications.rs  primitives.rs  serde_utils.rs  web.rs
bark-rest/: CLAUDE.md  Cargo.toml  build.rs  openapi.json
bark-rest-client/: Cargo.toml  README.md
bark-rest-client/.openapi-generator/: FILES
bark-rest-client/docs/: ArkAddressResponse.md  ArkInfo.md  BadRequestError.md  Balance.md  BarkNetwork.md  Bip321UriQuery.md  Bip321UriRequest.md  Bip321UriResponse.md  BitcoinApi.md  BitcoindAuth.md  BitcoindAuthOneOf.md  BitcoindAuthOneOf1.md  BitcoindAuthOneOf1UserPass.md  BitcoindAuthOneOfCookie.md  BlockRef.md  BoardFees.md  BoardRequest.md  BoardsApi.md  ChainSourceConfig.md  ChainSourceConfigOneOf.md  ChainSourceConfigOneOf1.md  ChainSourceConfigOneOf1Esplora.md  ChainSourceConfigOneOfBitcoind.md  ChildTransactionInfo.md  ConnectedResponse.md  CreateWalletRequest.md  CreateWalletResponse.md  DefaultApi.md  EncodedVtxoResponse.md  ExitAwaitingDeltaState.md  ExitCancelResponse.md  ExitCanceledState.md  ExitClaimInProgressState.md  ExitClaimVtxosRequest.md  ExitClaimableState.md  ExitError.md  ExitErrorOneOf.md  ExitErrorOneOf1.md  ExitErrorOneOf10.md  ExitErrorOneOf11.md  (+128 more)
bark-rest/examples/: dump_api_docs.rs
bark-rest/helpers/: models.rs
bark-rest/src/: auth.rs  config.rs  error.rs  lib.rs  notifications.rs
bark/examples/: dump-sqlite-schema.rs  simple_setup.rs
bark/src/: arkoor.rs  board.rs  chain.rs  config.rs  daemon.rs  database.rs  exit.rs  fees.rs  fs_perms.rs  lib.rs  lightning_utils.rs  lnurl.rs  mailbox.rs  movement.rs  notification.rs  offboard.rs  payment_method.rs  payment_request.rs  pid_lock.rs  proxy.rs  psbtext.rs  recovery.rs  round.rs  server.rs  test.rs  utils.rs  vtxo_selection.rs  vtxo_state.rs
bark/tests/: bark_persister_test.rs
bip321/: Cargo.toml
bip321/src/: error.rs  extension.rs  lib.rs
bitcoin-ext/: Cargo.toml
bitcoin-ext/src/: bdk.rs  bitcoin.rs  cpfp.rs  esplora.rs  fee.rs  lib.rs  rpc.rs  serde.rs
cln-rpc/: Cargo.toml  build.rs
cln-rpc/protos/: hold.proto  node.proto  primitives.proto
cln-rpc/src/: cln.rs  convert.rs  lib.rs
fuzz/: .gitignore  Cargo.toml  README.md  debug.sh  fuzz.sh
fuzz/src/: lib.rs
lib/: Cargo.toml  clippy.toml
lib/src/: address.rs  arkoor.rs  attestations.rs  board.rs  challenges.rs  connectors.rs  encode.rs  error.rs  fees.rs  forfeit.rs  integration.rs  lib.rs  lightning.rs  mailbox.rs  musig.rs  napkin.rs  offboard.rs  rounds.rs  util.rs
server/: Cargo.toml  build.rs  captaind.default.toml  config.default.toml  schema.sql  watchmand.default.toml
server-log/: Cargo.toml
server-log/src/: lib.rs  macros.rs  serde_utils.rs
server-rpc/: Cargo.toml  build.rs
server-rpc/protos/: bark_server.proto  core.proto  intman.proto  mailbox_server.proto
server-rpc/src/: aspd.rs  bark_server.rs  client.rs  convert.rs  error.rs  lib.rs  pver.rs
server/examples/: dump-default-captaind-config.rs  dump-default-config.rs  dump-default-watchmand-config.rs
server/src/: arkoor.rs  bitcoin_blocklist.rs  bitcoind.rs  config.rs  error.rs  fee_estimator.rs  filters.rs  flux.rs  forfeits.rs  lib.rs  mailbox_manager.rs  offboards.rs  psbtext.rs  rpcserver.rs  secret.rs  serde_util.rs  sweeps.rs  system.rs  telemetry.rs  tip_fetcher.rs  vtxopool.rs  wallet.rs  watchman.rs
shinigami/: Cargo.toml  README.md
shinigami/src/: lib.rs  v1.rs
shinigami/tests/: cairo_source.rs  execute-cairo-vectors.sh
testing/: Cargo.toml
testing/examples/: dump-server-postgres-schema.rs
testing/msrv-lib/: Cargo.toml
testing/src/: bark.rs  constants.rs  context.rs  control_server.rs  exit.rs  lib.rs  lightning.rs  util.rs
testing/tests/: bark.rs  barkd.rs  bitcoin_ext.rs  bitcoind.rs  block_index.rs  chain_source.rs  exit.rs  fees.rs  lightningd.rs  mod.rs  movement.rs  postgres.rs  server.rs  sweeper.rs  tor.rs
wasm-testing/: Cargo.toml
wasm-testing/src/: lib.rs  test_utils.rs
(+1103 files in other folders)
