[package]
name = "ark-lib"
version = "0.0.0-alpha01"
license = "CC0-1.0"
authors = [ "Steven Roose <steven@roose.io>" ]
edition = "2021"
repository = "https://github.com/ark-bitcoin/bark"

[lib]
name = "ark"

[dependencies]

# * EXPORTED DEPS
bitcoin.workspace = true
serde.workspace = true

# * INTERNAL DEPS
lazy_static.workspace = true
ciborium.workspace = true
rand.workspace = true
lightning-invoice.workspace = true

# using PR branch for musig2 code
[dependencies.secp256k1-musig]
package = "secp256k1"
git = "https://github.com/jlest01/rust-secp256k1.git"
rev = "1cc7410df436b73d06db3c8ff7cbb29a78916b06"
features = [ "serde" ]


[dev-dependencies]
bitcoinconsensus = "0.106.0+26.0"
rand = { version = "*", features = [ "small_rng" ] }
