[package]
name = "ark-lib"
version = "0.0.0-alpha"
license = "CC0-1.0"
authors = [ "Steven Roose <steven@roose.io>" ]
edition = "2021"
repository = "https://codeberg.org/ark-bitcoin/bark"

[lib]
name = "ark"

[features]
test-util = []

[dependencies]

# * EXPORTED DEPS
bitcoin = { version = "0.32", features = [ "serde", "rand", "rand-std" ] }
bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }
serde = { version = "1.0.219" }

# * INTERNAL DEPS
lazy_static.workspace = true
thiserror.workspace = true
rand.workspace = true
lightning-invoice.workspace = true
lightning.workspace = true
# can use bitcoin::hex once they upgrade to v0.3.0
hex-conservative = "0.3.0"

# using PR branch for musig2 code
[dependencies.secp256k1-musig]
package = "secp256k1"
git = "https://github.com/rust-bitcoin/rust-secp256k1.git"
rev = "72822e16b1433337baceb0abb5134cc24a062adb"
features = [ "serde" ]


[dev-dependencies]
bitcoinconsensus = "0.106.0+26.0"
rand = { version = "0.9.0", features = [ "small_rng" ] }
