[package]
name = "ark-lib"
version = "0.0.0-alpha"
license = "CC0-1.0"
authors = [ "Steven Roose <steven@roose.io>" ]
edition = "2021"
repository = "https://github.com/ark-bitcoin/bark"

[lib]
name = "ark"

[features]
test-util = []

[dependencies]

# * EXPORTED DEPS
bitcoin.workspace = true
serde.workspace = true

# * INTERNAL DEPS
bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }
lazy_static.workspace = true
thiserror.workspace = true
ciborium.workspace = true
rand.workspace = true
lightning-invoice.workspace = true
# can use bitcoin::hex once they upgrade to v0.3.0
hex-conservative = "0.3.0"

# using PR branch for musig2 code
[dependencies.secp256k1-musig]
package = "secp256k1"
git = "https://github.com/jlest01/rust-secp256k1.git"
rev = "1cc7410df436b73d06db3c8ff7cbb29a78916b06"
features = [ "serde" ]


[dev-dependencies]
bitcoinconsensus = "0.106.0+26.0"
rand = { version = "0.9.0", features = [ "small_rng" ] }
