[package]
name = "ark-testing"
version = "0.1.0"
edition = "2021"

[features]
slow_test = []

[dependencies]
ark-lib = { path = "../ark-lib" }
aspd-log = { path = "../aspd-log" }
aspd-rpc-client = { path = "../aspd-rpc-client" }
bark-cln = { path = "../bark-cln"}
bark-json = { path = "../bark-json"}

bitcoincore-rpc = "0.19.0"
portpicker = "0.1.1"
regex = "1.10.5"
which = "6.0.1"

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bitcoin.workspace = true
hex.workspace = true
log.workspace = true
fern.workspace = true
chrono.workspace = true
rand.workspace = true
tokio.workspace = true
tonic.workspace = true
futures.workspace = true
