[package]
name = "ark-testing"
version = "0.1.0"
edition = "2021"

[features]
slow_test = []

[dependencies]
ark-lib = { path = "../ark-lib" }
bark-aspd = { path = "../aspd" }
aspd-log = { path = "../aspd-log" }
aspd-rpc = { path = "../aspd-rpc", features = ["server"] }
bark-cln = { path = "../bark-cln"}
bark-json = { path = "../bark-json"}
bark-client = { path = "../bark" } 

bitcoincore-rpc = "0.19.0"
portpicker = "0.1.1"
regex = "1.10.5"
users = "0.11"
which = "6.0.1"
async-trait = "0.1.83"

anyhow.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
bitcoin.workspace = true
bdk_esplora.workspace = true
hex.workspace = true
log.workspace = true
fern.workspace = true
chrono.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
futures.workspace = true
