[package]
name = "ark-testing"
version = "0.0.0"
edition = "2021"

[features]
slow_test = []

[dependencies]
ark-lib = { path = "../ark-lib", features = ["test-util"] }
bark-server = { path = "../server" }
bark-server-log = { path = "../server-log" }
aspd-rpc = { path = "../aspd-rpc", features = ["server"] }
bark-cln-rpc = { path = "../cln-rpc"}
bark-json = { path = "../bark-json"}
bark-client = { path = "../bark" } 
bark-bitcoin-ext = { path = "../bitcoin-ext" }

bitcoincore-rpc = "0.19.0"
portpicker = "0.1.1"
regex = "1.10.5"
libc = "0.2"
which = "6.0.1"
nix = { version = "0.29", features = [ "signal" ] }

anyhow.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
bitcoin.workspace = true
bip39.workspace = true
bdk_esplora.workspace = true
log.workspace = true
fern.workspace = true
chrono.workspace = true
rand.workspace = true
tokio.workspace = true
tokio.features = [ "process" ]
tokio-stream.workspace = true
tonic.workspace = true
futures.workspace = true
async-trait.workspace = true
tokio-postgres.workspace = true
semver.workspace = true
