[package]
name = "aspd-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# OWN
ark-lib = { path = "../ark-lib" }

log.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

bdk_wallet.workspace = true
bitcoin.workspace = true
