[package]
name = "aspd-log"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# OWN
ark-lib = { path = "../ark-lib" }
bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }

log.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
humantime.workspace = true

bdk_wallet.workspace = true
bitcoin.workspace = true

tracing.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
