[package]
name = "aspd-rpc"
version = "0.0.0-alpha01"
license = "CC0-1.0"
authors = [ "Steven Roose <steven@roose.io>" ]
edition = "2021"
repository = "https://github.com/ark-bitcoin/bark"

[features]
server = []

[dependencies]
# OWN
ark-lib = { path = "../ark-lib" }

# EXPORTED
tonic.workspace = true

# INTERNAL
prost.workspace = true
tokio.workspace = true

[build-dependencies]
tonic-build.workspace= true
