[package]
name = "aspd-rpc"
version = "0.0.0-alpha"
license = "CC0-1.0"
authors = [ "Steven Roose <steven@roose.io>" ]
edition = "2021"
repository = "https://github.com/ark-bitcoin/bark"

[features]
server = []

[dependencies]
# OWN
ark-lib = { path = "../ark-lib" }
bitcoin.workspace = true

# EXPORTED
tonic.workspace = true

# INTERNAL
prost.workspace = true
tokio.workspace = true

[build-dependencies]
tonic-build.workspace= true
