[package]
name = "bark-aspd"
version = "0.0.0-alpha01"
license = "CC0-1.0"
authors = ["Steven Roose <steven@roose.io>"]
edition = "2021"
repository = "https://github.com/ark-bitcoin/bark"

[lib]
name = "aspd"
path = "src/lib.rs"

[[bin]]
name = "aspd"
path = "src/main.rs"

[build-dependencies]
tonic-build.workspace = true

[dependencies]
ark-lib = { path = "../ark-lib" }
aspd-rpc-client = { path = "../aspd-rpc-client" }

anyhow.workspace = true
lazy_static.workspace = true
log.workspace = true
fern.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
bitcoin.workspace = true
bip39.workspace = true
bdk_wallet.workspace = true
bdk_bitcoind_rpc.workspace = true
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

rocksdb = "0.22.0"
