[package]
name = "bark-aspd"
version = "0.0.0-alpha01"
license = "CC0-1.0"
authors = ["Steven Roose <steven@roose.io>"]
edition = "2021"
repository = "https://github.com/ark-bitcoin/bark"

[lib]
name = "aspd"
path = "src/lib.rs"

[[bin]]
name = "aspd"
path = "src/main.rs"

[build-dependencies]
tonic-build.workspace = true

[dependencies]

# OWN
ark-lib = { path = "../ark-lib" }
aspd-rpc = { path = "../aspd-rpc", features = ["server"] }
bark-cln = { path = "../bark-cln" }
aspd-log = { path = "../aspd-log" }
stream-until = { path = "../stream-until" }

# EXPORTED
bitcoin.workspace = true
lightning-invoice.workspace = true
anyhow.workspace = true
serde.workspace = true
log.workspace = true

# INTERNAL
rocksdb = "0.22.0"

lazy_static.workspace = true
fern.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
serde_json.workspace = true
ciborium.workspace = true

bip39.workspace = true
bdk_wallet.workspace = true
bdk_bitcoind_rpc.workspace = true

tonic.workspace = true
tower.workspace = true
http.workspace = true
http-body.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[profile.release]
debug = true
