[package]
name = "bark-cli"
version = "0.1.0-beta.3"
edition = "2024"
license = "CC0-1.0"
description = "CLI for the bitcoin Ark protocol built by Second"
authors = [ "Team Second <hello@second.tech>" ]

[[bin]]
name = "bark"
path = "src/bin/bark/main.rs"

[[bin]]
name = "barkd"
path = "src/bin/barkd/main.rs"

[dependencies]
ark-lib = { version = "0.1.0-beta.3", path = "../lib" }
bark-json = { version = "0.1.0-beta.3", path = "../bark-json" }
bark-wallet = { version = "0.1.0-beta.3", path = "../bark", features = [ "onchain_bdk" ] }
bark-bitcoin-ext = { version = "0.1.0-beta.3", path = "../bitcoin-ext" }
bark-server-rpc = { version = "0.1.0-beta.3", path = "../server-rpc" }
bark-rest = { version = "0.1.0-beta.3", path = "../bark-rest" }

anyhow.workspace = true
bitcoin.workspace = true
bip39.workspace = true
clap.workspace = true
chrono.workspace = true
lazy_static.workspace = true
env_logger.workspace = true
lightning.workspace = true
lightning-invoice.workspace = true
lnurl-rs.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
tonic.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["macros"] }

home = "=0.5.9"

