[package]
name = "bark-cli"
version = "0.1.0-beta.9"
edition = "2024"
license = "MIT"
description = "CLI for the bitcoin Ark protocol built by Second"
authors = [ "Team Second <hello@second.tech>" ]

[[bin]]
name = "bark"
path = "src/bin/bark/main.rs"

[[bin]]
name = "barkd"
path = "src/bin/barkd/main.rs"

[features]
default = ["tls-native-roots"]

# TLS certificate verification options (pick one)
tls-native-roots = ["bark-wallet/tls-native-roots", "bark-server-rpc/tls-native-roots"]
# Use this feature for cross-compilation. It uses rustls with bundled Mozilla
# CA certificates instead of the system's native TLS and certificate store.
tls-webpki-roots = ["bark-wallet/tls-webpki-roots", "bark-server-rpc/tls-webpki-roots"]

[dependencies]
ark-lib = { version = "0.1.0-beta.9", path = "../lib" }
bark-json = { version = "0.1.0-beta.9", path = "../bark-json" }
bark-wallet = { version = "0.1.0-beta.9", path = "../bark", default-features = false, features = [ "onchain-bdk", "sqlite", "filestore", "pid-lock", "socks5-proxy", "rand", "native" ] }
bark-bitcoin-ext = { version = "0.1.0-beta.9", path = "../bitcoin-ext", features = ["rpc-socks5-proxy"] }
bark-server-rpc = { version = "0.1.0-beta.9", path = "../server-rpc", default-features = false, features = ["tonic-native", "socks5-proxy"] }
bark-rest = { version = "0.1.0-beta.9", path = "../bark-rest" }

anyhow.workspace = true
bitcoin.workspace = true
bip39.workspace = true
clap.workspace = true
chrono.workspace = true
lazy_static.workspace = true
env_logger.workspace = true
lightning.workspace = true
lightning-invoice.workspace = true
lnurl-rs.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
tonic.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["macros", "fs", "signal", "rt-multi-thread"] }

home = "=0.5.9"

