[package]
name = "bark-cln"
version = "0.0.0"
edition = "2021"

[dependencies]
ark-lib = { path = "../ark-lib" }
bitcoin.workspace = true
anyhow.workspace = true
hex.workspace = true
futures.workspace = true
log.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace= true
