[package]
name = "bark-json"
version = "0.1.0-beta.1" # lock to bark-wallet version
license = "CC0-1.0"
authors = ["Steven Roose <steven@roose.io>"]
description = "JSON definitions for the bark APIs"
edition = "2024"

[dependencies]
# OWN
ark-lib = { version = "0.1.0-beta.1", path = "../lib" }
bark-bitcoin-ext = { version = "0.1.0-beta.1", path = "../bitcoin-ext", default-features = false }

# EXPORTED
bitcoin.workspace = true
serde.workspace = true
humantime.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
