[package]
name = "bark-json"
version = "0.1.0-beta.2" # lock to bark-wallet version
license = "CC0-1.0"
authors = [ "Team Second <hello@second.tech>" ]
description = "JSON definitions for the bark APIs"
edition = "2024"

[dependencies]
# OWN
bark-wallet = { version = "0.1.0-beta.2", path = "../bark" }
ark-lib = { version = "0.1.0-beta.2", path = "../lib" }
bark-bitcoin-ext = { version = "0.1.0-beta.2", path = "../bitcoin-ext", default-features = false }

# EXPORTED
bitcoin.workspace = true
serde.workspace = true
humantime.workspace = true
thiserror.workspace = true
chrono.workspace = true

utoipa = { version = "5.4.0", optional = true, features = ["chrono"] }

[dev-dependencies]
serde_json.workspace = true
