[package]
name = "bark-json"
version = "0.1.0-beta.7" # lock to bark-wallet version
license = "CC0-1.0"
authors = [ "Team Second <hello@second.tech>" ]
description = "JSON definitions for the bark APIs"
edition = "2024"

[features]
default = ["onchain_bdk"]
onchain_bdk = ["bark-wallet/onchain_bdk", "bark-bitcoin-ext/bdk"]

[dependencies]
# OWN
bark-wallet = { version = "0.1.0-beta.7", path = "../bark" }
ark-lib = { version = "0.1.0-beta.7", path = "../lib" }
bark-bitcoin-ext = { version = "0.1.0-beta.7", path = "../bitcoin-ext", default-features = false }

# INTERNAL
serde_json.workspace = true

# EXPORTED
anyhow.workspace = true
bitcoin.workspace = true
serde.workspace = true
humantime.workspace = true
thiserror.workspace = true
chrono.workspace = true

utoipa = { version = "5.4.0", optional = true, features = ["chrono"] }

[dev-dependencies]
serde_json.workspace = true
