[package]
name = "bark-rest-client"
version = "0.1.0-beta.5"
authors = ["hello@second.tech"]
description = "A simple REST API for Barkd"
license = "CC0-1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
bark-json = { version = "0.1.0-beta.5", path = "../bark-json" }
bark-rest = { version = "0.1.0-beta.5", path = "../bark-rest" }
