[package]
name = "bark-wallet"
version = "0.1.3"
license = "MIT"
authors = [ "Team Second <hello@second.tech>" ]
repository = "https://gitlab.com/ark-bitcoin/bark"
description = "Wallet library and CLI for the bitcoin Ark protocol built by Second"
edition = "2024"
readme = "README.md"

[features]
default = ["rand", "sqlite", "native", "tls-native-roots"]

pid-lock = []
onchain-bdk = ["bdk_wallet", "bark-bitcoin-ext/bdk"]

# The default persistence
sqlite = ["rusqlite", "bdk_wallet/rusqlite"]
# Used for testing, enables testing storage adaptor implementation
filestore = ["tokio/fs"]
indexed-db = ["dep:indexed-db", "dep:web-sys", "dep:serde-wasm-bindgen"]

rand = ["bitcoin/rand", "bip39/rand"]

# TLS implementations
tls-native-roots = ["bark-server-rpc/tls-native-roots"]
tls-webpki-roots = ["bark-server-rpc/tls-webpki-roots"]

# Native features
native = ["bark-server-rpc/tonic-native"]
socks5-proxy = ["bark-bitcoin-ext/rpc-socks5-proxy", "bark-server-rpc/socks5-proxy", "http"]

# Web features
wasm-web = [
	"ark-lib/wasm-web",
	"bark-server-rpc/tonic-web",
	"bark-bitcoin-ext/wasm-web",
	"getrandom",
	"wasm-bindgen-futures",
]

[lib]
name = "bark"
path = "src/lib.rs"

[dependencies]

# OWN
ark-lib = { version = "0.1.3", path = "../lib" }
bark-bitcoin-ext = { version = "0.1.3", path = "../bitcoin-ext", default-features = false, features = [
	"bdk", "rpc",
]}
bark-server-rpc = { version = "0.1.3", path = "../server-rpc", default-features = false }

# EXPORTED
bitcoin.workspace = true
lightning-invoice.workspace = true
lnurl-rs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
tokio-util.workspace = true

# INTERNAL
rand.workspace = true

lazy_static.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
config.workspace = true

bip39.workspace = true
bdk_core = { workspace = true }
bdk_bitcoind_rpc = { workspace = true }
bdk_esplora = { workspace = true }
# crate used by bdk_esplora, first version with submit_package
esplora-client = { workspace = true }
lightning.workspace = true

tonic = { version = "0.14.2", default-features = false }
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
parking_lot.workspace = true
http = { workspace = true, optional = true }

# Only used for built-in BDK Wallet
bdk_wallet = { workspace = true, optional = true }

indexed-db = { version = "0.4.2", optional = true }
web-sys = { version = "0.3.83", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

# Storage clients crates
rusqlite = { version = "0.31.0", features = ["chrono"], optional = true }

wasm-bindgen-futures = { version = "0.4.56", optional = true }
# needed to force dependencies to use js features
getrandom = { version = "0.3.0", features = ["wasm_js"], optional = true }

[dev-dependencies]
ark-lib = { path = "../lib", features = [ "test-util" ] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
console_log = "0.2"

# tempfile doesn't work on WASM (no filesystem), only include for native tests
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3"
